Fix NodeController race in outgoing message queue

It's possible, albeit extremely unlikely, for a node to be introduced to
a peer in the small window between when it first tries to send an event
message and when it decides to stick the message in the queue for that
peer. If this happens, the message will never get flushed to the peer.

BUG=731775

Change-Id: If185139b900e90819ff989ac3622271dc1837eb5
Reviewed-on: https://chromium-review.googlesource.com/530045
Reviewed-by: Jay Civelli <jcivelli@chromium.org>
Commit-Queue: Ken Rockot <rockot@chromium.org>
Cr-Commit-Position: refs/heads/master@{#478429}
Former-commit-id: 8dc1fcc39716152ef830099390396c0ed3d3e35c